# oxc-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  maturin.yml  release.yml
benchmarks/: baseline.json  run_benchmarks.py
examples/: get_text_example.py
python/oxc_python/: __init__.py  allocator.pyi  node.pyi  parse_result.pyi  span.pyi
src/: core.rs  lib.rs  parser.rs  traversal.rs
src/conversion/: expressions.rs  helpers.rs  jsx.rs  mod.rs  statements.rs  typescript.rs
src/nodes/: expressions.rs  jsx.rs  mod.rs  statements.rs  typescript.rs
tests/: test_comments.py  test_errors.py  test_integration.py  test_line_numbers.py  test_nodes.py  test_nodes_javascript.py  test_nodes_jsx.py  test_nodes_typescript.py  test_parse_result.py  test_parser.py  test_performance.py  test_smoke.py  test_walk.py
